Done with the about section

--- a/assets/tailwind/tailwind.css
+++ b/assets/tailwind/tailwind.css
@@ -15,11 +15,11 @@
 	}
 
 	p {
-		@apply lg:text-lg xl:text-2xl !leading-[142%]
+		@apply lg:text-lg xl:text-2xl 2xl:text-[26px] !leading-[142%]
 	}
 
 	h1, h2, h3, h4, h5 {
-		@apply font-semibold text-[40px] md:text-6xl lg:text-7xl xl:text-[78px] 2xl:text-[84px] font-interTight !leading-[118%]
+		@apply font-semibold text-[40px] md:text-5xl lg:text-6xl xl:text-[78px] 2xl:text-[84px] font-interTight !leading-[118%]
 	}
 }
 
