--- a/assets/tailwind/tailwind.css
+++ b/assets/tailwind/tailwind.css
@@ -18,7 +18,7 @@
 		@apply lg:text-lg xl:text-2xl 2xl:text-[26px] !leading-[142%]
 	}
 
-	h1, h2, h3, h4, h5 {
+	h1, h2, h3, h4, h5, .TextAnim span {
 		@apply font-semibold text-[40px] md:text-5xl lg:text-6xl xl:text-[78px] 2xl:text-[84px] font-interTight !leading-[118%]
 	}
 }
