--- a/assets/tailwind/tailwind.css
+++ b/assets/tailwind/tailwind.css
@@ -6,20 +6,24 @@
 @tailwind utilities;
 
 @layer base {
+	* {
+		@apply focus:!outline-none
+	}
+	
 	body {
 		@apply font-inter
 	}
 
 	.constraint {
-		@apply container mx-auto px-5 2xl:px-20
+		@apply px-5 xl:px-[4.86vw] overflow-hidden
 	}
 
 	p {
-		@apply lg:text-lg xl:text-2xl 2xl:text-[26px] !leading-[142%]
+		@apply lg:text-lg xl:text-[1.66vw] !leading-[142%]
 	}
 
 	h1, h2, h3, h4, h5, .TextAnim span {
-		@apply font-semibold text-[40px] md:text-5xl lg:text-6xl xl:text-[78px] 2xl:text-[84px] font-interTight !leading-[118%]
+		@apply font-semibold text-[40px] md:text-5xl lg:text-6xl xl:text-[5.4vw] font-interTight !leading-[118%]
 	}
 }
 
