--- a/assets/cursor.css
+++ b/assets/cursor.css
@@ -52,12 +52,22 @@
 
 .mf-cursor.-text:before {
 	opacity: 0.85;
-	transform: scale(1.7);
+	transform: scale(4);
+	-webkit-transform: scale(4);
+	-moz-transform: scale(4);
+	-ms-transform: scale(4);
+	-o-transform: scale(4);
+	background-color: #B1FC03;
+	border: 0px;
 }
 
 .mf-cursor.-text.-active:before {
 	transform: scale(1.6);
 	transition-duration: 0.2s;
+	-webkit-transform: scale(1.6);
+	-moz-transform: scale(1.6);
+	-ms-transform: scale(1.6);
+	-o-transform: scale(1.6);
 }
 
 .mf-cursor.-icon:before {
@@ -83,8 +93,9 @@
 	justify-content: center;
 	transform: scale(0) rotate(10deg);
 	opacity: 0;
-	color: #fff;
-	font-size: 16px;
+	color: #212121;
+	font-size: 28px;
+	font-weight: 600;
 	line-height: 20px;
 	text-align: center;
 	transition: opacity 0.4s, transform 0.3s;
@@ -94,6 +105,10 @@
 .mf-cursor.-icon .mf-cursor-text {
 	opacity: 1;
 	transform: scale(1);
+	-webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	-ms-transform: scale(1);
+	-o-transform: scale(1);
 }
 
 .mf-cursor-media {
