--- a/assets/cursor.css
+++ b/assets/cursor.css
@@ -7,6 +7,7 @@
 	contain: layout style size;
 	pointer-events: none;
 	transition: opacity 0.3s, color 0.4s;
+	@apply hidden lg:block
 }
 
 .mf-cursor:before {
