--- a/assets/tailwind/tailwind.css
+++ b/assets/tailwind/tailwind.css
@@ -15,7 +15,7 @@
 	}
 
 	.constraint {
-		@apply px-5 xl:px-[4.86vw] overflow-hidden
+		@apply px-5 lg:px-[4.86vw] overflow-hidden
 	}
 
 	p {
@@ -23,7 +23,7 @@
 	}
 
 	h1, h2, h3, h4, h5, .TextAnim span {
-		@apply font-semibold text-[40px] md:text-5xl lg:text-6xl xl:text-[5.4vw] font-interTight !leading-[118%]
+		@apply font-semibold text-[40px] md:text-[44px] lg:text-[5.4vw] font-interTight !leading-[118%]
 	}
 }
 
