--- a/assets/tailwind/tailwind.css
+++ b/assets/tailwind/tailwind.css
@@ -15,15 +15,15 @@
 	}
 
 	.constraint {
-		@apply px-5 lg:px-[4.86vw] overflow-hidden
+		@apply px-4 lg:px-[4.86vw] overflow-hidden
 	}
 
 	p {
-		@apply lg:text-base xl:text-[1.39vw] !leading-[142%]
+		@apply text-sm lg:text-base xl:text-[1.39vw] !leading-[142%]
 	}
 
 	h1, h2, h3, h4, h5, .TextAnim span {
-		@apply font-semibold text-[40px] md:text-[44px] lg:text-[5.4vw] font-interTight !leading-[118%]
+		@apply font-semibold text-4xl md:text-[44px] lg:text-[5.4vw] font-interTight !leading-[118%]
 	}
 }
 
