--- a/assets/main.css
+++ b/assets/main.css
@@ -5,3 +5,16 @@
 .flickity-viewport {
 	overflow: visible !important;
 }
+
+.bubble {
+	width: fit-content !important;
+	font-family: 'Inter', sans-serif !important;
+	font-size: 12px !important;
+	margin-top: 20px !important;
+	margin: auto !important;
+	border-radius: 12px !important;
+	-webkit-border-radius: 12px;
+	-moz-border-radius: 12px;
+	-ms-border-radius: 12px;
+	-o-border-radius: 12px;
+}
